--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bzchao.core</groupId>
-    <artifactId>chao-core</artifactId>
+    <artifactId>chao-web-core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>chao-core</name>
+    <name>chao-web-core</name>
     <description>chao-core for Spring Boot</description>
 
     <parent>
@@ -25,8 +25,6 @@
     </properties>
 
     <dependencies>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
