--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bzchao.core</groupId>
-    <artifactId>chao-core</artifactId>
+    <artifactId>chao-web-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>web-core</module>
+        <module>web-security/web-security-oauth</module>
+        <module>web-security/web-security-shiro</module>
         <module>web-test</module>
     </modules>
     <packaging>pom</packaging>
@@ -28,6 +30,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
