--- a/web-security/web-security-oauth/pom.xml
+++ b/web-security/web-security-oauth/pom.xml
@@ -6,22 +6,21 @@
         <groupId>com.bzchao.core</groupId>
         <artifactId>chao-web-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-test</artifactId>
+    <artifactId>web-security-oauth</artifactId>
+
     <dependencies>
         <dependency>
-            <groupId>com.bzchao.core</groupId>
-            <artifactId>web-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.5.RELEASE</version>
         </dependency>
     </dependencies>
-
 </project>
