--- a/web-security/web-security-shiro/pom.xml
+++ b/web-security/web-security-shiro/pom.xml
@@ -6,21 +6,25 @@
         <groupId>com.bzchao.core</groupId>
         <artifactId>chao-web-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-test</artifactId>
+    <artifactId>web-security-shiro</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.bzchao.core</groupId>
-            <artifactId>web-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.2.0</version>
         </dependency>
     </dependencies>
 
