新增：url添加token，自定义401页面

--- a/web-test/pom.xml
+++ b/web-test/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bzchao.core</groupId>
+            <artifactId>web-security-shiro</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
