--- a/web-security/web-security-shiro/pom.xml
+++ b/web-security/web-security-shiro/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
