--- a/web-test/src/main/resources/application.yml
+++ b/web-test/src/main/resources/application.yml
@@ -19,6 +19,30 @@ spring:
       # mysql 用 false | oracle 用 true
       pool-prepared-statements: false
 
+  redis:
+    host: alivps.bzchao.com
+    port: 6379
+    database: 0
+    timeout: 1000s  # 数据库连接超时时间，2.0 中该参数的类型为Duration，这里在配置的时候需要指明单位
+    # 连接池配置，2.0中直接使用jedis或者lettuce配置连接池
+    jedis:
+      pool:
+        # 最大空闲连接数
+        max-idle: 500
+        # 最小空闲连接数
+        min-idle: 50
+        # 等待可用连接的最大时间，负数为不限制
+        max-wait: -1
+        # 最大活跃连接数，负数为不限制
+        max-active: -1
+
 swagger:
   enable: true
   tokenName: Authorization
+
+logging:
+  level:
+    root: info
+    com.bzchao: debug
+
+
