--- a/web-security/web-security-shiro/pom.xml
+++ b/web-security/web-security-shiro/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>shiro-redis</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
