--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bzchao.core</groupId>
-    <artifactId>chao-core</artifactId>
+    <artifactId>chao-core-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>web-core</module>
@@ -20,14 +20,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.1.RELEASE</version>
-        <relativePath/>
     </parent>
 
     <properties>
+        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
 
     <build>
         <plugins>
