--- a/web-test/pom.xml
+++ b/web-test/pom.xml
@@ -4,17 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.bzchao.core</groupId>
-        <artifactId>chao-web-core</artifactId>
+        <artifactId>chao-core-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>web-test</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
-            <artifactId>web-core</artifactId>
             <groupId>com.bzchao.core</groupId>
+            <artifactId>web-core</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency></dependencies>
+        </dependency>
+    </dependencies>
 
 </project>
